// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`TaskSummaryCard > calculates from mainThreadTasks when diagnostics missing 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow md:col-span-2 lg:col-span-3"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Task Summary
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="overflow-x-auto"
    >
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-auto min-w-full"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Total Tasks
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3"
              >
                Total Time
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Avg Duration
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Longest Task
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;10ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;25ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;50ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3 text-center"
              >
                &gt;100ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3 text-center"
              >
                &gt;500ms
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                2
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  80 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  40 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  50 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;

exports[`TaskSummaryCard > renders stats from diagnostics item 1`] = `
<div
  class="rounded-xl border bg-card text-card-foreground shadow md:col-span-2 lg:col-span-3"
>
  <div
    class="p-6 flex flex-row items-center justify-between space-y-0"
  >
    <div
      class="font-semibold leading-none tracking-tight"
    >
      Task Summary
    </div>
    <button
      class="inline-flex items-center justify-center gap-2 whitespace-nowrap rounded-md text-sm font-medium transition-colors focus-visible:outline-none focus-visible:ring-1 focus-visible:ring-ring disabled:pointer-events-none disabled:opacity-50 [&_svg]:pointer-events-none [&_svg]:size-4 [&_svg]:shrink-0 border border-input bg-background shadow-sm hover:bg-accent hover:text-accent-foreground h-9 w-9 relative"
      title="Copy table"
      type="button"
    >
      <svg
        class="lucide lucide-copy h-4 w-4"
        fill="none"
        height="24"
        stroke="currentColor"
        stroke-linecap="round"
        stroke-linejoin="round"
        stroke-width="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <rect
          height="14"
          rx="2"
          ry="2"
          width="14"
          x="8"
          y="8"
        />
        <path
          d="M4 16c-1.1 0-2-.9-2-2V4c0-1.1.9-2 2-2h10c1.1 0 2 .9 2 2"
        />
      </svg>
      <span
        class="sr-only"
      >
        Copy table
      </span>
    </button>
  </div>
  <div
    class="p-6 pt-0"
  >
    <div
      class="overflow-x-auto"
    >
      <div
        class="relative w-full overflow-auto"
      >
        <table
          class="w-full caption-bottom text-sm table-auto min-w-full"
        >
          <thead
            class="[&_tr]:border-b"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Total Tasks
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3"
              >
                Total Time
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Avg Duration
              </th>
              <th
                class="h-10 text-left align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-28 whitespace-nowrap px-3"
              >
                Longest Task
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;10ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;25ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-20 whitespace-nowrap px-3 text-center"
              >
                &gt;50ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3 text-center"
              >
                &gt;100ms
              </th>
              <th
                class="h-10 align-top font-medium text-muted-foreground [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 border min-w-24 whitespace-nowrap px-3 text-center"
              >
                &gt;500ms
              </th>
            </tr>
          </thead>
          <tbody
            class="[&_tr:last-child]:border-0"
          >
            <tr
              class="border-b transition-colors hover:bg-muted/50 data-[state=selected]:bg-muted"
            >
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                10
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  500 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  50 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3"
              >
                <span
                  class=""
                  title="ms"
                >
                  0 ms
                </span>
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                2
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                1
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
              <td
                class="p-2 align-top [&:has([role=checkbox])]:pr-0 *:[[role=checkbox]]:translate-y-0.5 px-3 text-center"
              >
                0
              </td>
            </tr>
          </tbody>
        </table>
      </div>
    </div>
  </div>
</div>
`;
